src/test/deca/syntax/valid/created/printlnx-entier.deca
{
    //int a = 1;
    printlnx(1);
}