src/test/deca/syntax/invalid/created/impossible-op.deca
//erreur au niveau des tokens
{
    int a ;
    a++;
}